--- a/MyStock/Pages/Uoms/UomPage.xaml
+++ b/MyStock/Pages/Uoms/UomPage.xaml
@@ -32,13 +32,13 @@
                  Margin="0,10"
                  materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.Name}"
                  materialDesign:TextFieldAssist.HasClearButton="True"
-                 Style="{StaticResource FloatingHintTextBox}"
+                 Style="{StaticResource MaterialDesignFloatingHintTextBox}"
                  Text="{Binding Name}" />
         <TextBox Grid.Row="2"
                  Margin="0,10"
                  materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.UomCode}"
                  materialDesign:TextFieldAssist.HasClearButton="True"
-                 Style="{StaticResource FloatingHintTextBox}"
+                 Style="{StaticResource MaterialDesignFloatingHintTextBox}"
                  Text="{Binding Code}" />
 
         <TextBox Grid.Row="3"
