--- a/MyStock/Controls/FullTextSearch.xaml
+++ b/MyStock/Controls/FullTextSearch.xaml
@@ -1,7 +1,6 @@
 ﻿<UserControl x:Class="MyStock.Controls.FullTextSearch"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:controls="clr-namespace:MyStock.Controls"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:materialDesign="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -12,12 +11,11 @@
              mc:Ignorable="d">
     <Grid>
         <TextBox x:Name="uiSearch"
-                 Padding="10,7,5,0"
+                 Padding="10,7"
                  VerticalContentAlignment="Center"
-                 controls:SelectAllFocusBehavior.Enable="True"
                  materialDesign:HintAssist.Hint="{Binding ElementName=thisControl, Path=Hint}"
-                 materialDesign:TextFieldAssist.HasClearButton="True"
                  GotFocus="uiSearch_GotFocus"
+                 IsEnabled="{Binding ElementName=thisControl, Path=IsEnabled}"
                  LostFocus="uiSearch_LostFocus"
                  Style="{StaticResource MaterialDesignOutlinedTextBox}"
                  Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" />
@@ -28,19 +26,16 @@
                IsOpen="{Binding IsSearchResultShown}"
                Placement="Bottom"
                PlacementTarget="{Binding ElementName=uiSearch}">
-            <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth3" Background="{DynamicResource MaterialDesignPaper}">
+            <materialDesign:Card Margin="0"
+                                 Padding="0"
+                                 materialDesign:ShadowAssist.ShadowDepth="Depth3"
+                                 Background="{DynamicResource MaterialDesignPaper}">
                 <Border BorderBrush="{DynamicResource MaterialDesignDivider}" BorderThickness="1">
                     <Grid Width="{Binding ElementName=uiSearch, Path=ActualWidth}">
                         <ListBox x:Name="ResultList"
                                  ItemsSource="{Binding SearchResults}"
                                  ScrollViewer.VerticalScrollBarVisibility="Auto"
-                                 SelectedItem="{Binding SelectedSearchItem}">
-                            <d:ListBox.Items>
-                                <ListBoxItem />
-                                <ListBoxItem />
-                                <ListBoxItem />
-                            </d:ListBox.Items>
-                        </ListBox>
+                                 SelectedItem="{Binding SelectedSearchItem}" />
                     </Grid>
                 </Border>
             </materialDesign:Card>
