--- a/MyStock/MainWindow.xaml
+++ b/MyStock/MainWindow.xaml
@@ -1,19 +1,18 @@
 ﻿<mah:MetroWindow x:Class="MyStock.MainWindow"
                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                 xmlns:common="clr-namespace:MyStock.Common"
                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                  xmlns:localControls="clr-namespace:MyStock.Controls"
-                 xmlns:localConvertors="clr-namespace:MyStock.Converters"
                  xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
                  xmlns:materialDesign="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"
                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                 xmlns:navigation="clr-namespace:MyStock.Common"
                  Title="My stock"
                  MinWidth="600"
                  MinHeight="700"
                  Background="{DynamicResource MaterialDesignPaper}"
-                 FontFamily="{StaticResource MaterialDesignFont}"
-                 TextElement.FontSize="13"
+                 FontFamily="Segoe UI"
+                 TextElement.FontSize="{x:Static common:AppConfig.FontSize}"
                  TextElement.FontWeight="Regular"
                  TextElement.Foreground="{DynamicResource MaterialDesignBody}"
                  TextOptions.TextFormattingMode="Ideal"
@@ -21,11 +20,6 @@
                  WindowStartupLocation="CenterScreen"
                  WindowState="Maximized"
                  mc:Ignorable="d">
-    <mah:MetroWindow.Resources>
-        <ResourceDictionary>
-            <localConvertors:StringToUpperConverter x:Key="StringToUpperConverter" />
-        </ResourceDictionary>
-    </mah:MetroWindow.Resources>
     <mah:MetroWindow.RightWindowCommands>
         <mah:WindowCommands>
             <localControls:ThemeSwitcher />
@@ -50,7 +44,7 @@
         <Grid>
 
             <Grid.Resources>
-                <DataTemplate x:Key="MenuItemTemplate" DataType="{x:Type navigation:MenuItem}">
+                <DataTemplate x:Key="MenuItemTemplate" DataType="{x:Type common:MenuItem}">
                     <Grid Height="48" TextElement.Foreground="{DynamicResource MaterialDesignDarkForeground}">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="48" />
